...
      name={name}
      render={({ field: { onChange, onBlur, value } }) => {
        const stringValue = typeof value === 'string' ? value : '';
        return (
          <>
            <AuthInput
              testID="registration-field-companyCode"
              leftIcon="qrcode"
              placeholder="Company Code (e.g. FCC-7A91KD)"
              value={stringValue}
              onChangeText={(text: string) => {
                onChange(text);
                setChecked(false);
...
